# todo-app-servant-elm

./: .gitignore  LICENSE  README.md  TestModel.hs  build_run.sh  stack.yaml  todo-app-servant-elm.cabal
app/: Main.hs
frontend/: .yo-rc.json  elm.json  index.html  package.json  webpack.config.js
frontend/src/: Main.elm  index.html  index.js  style.scss
frontend/src/Api/: TodoApi.elm
frontend/src/App/: State.elm  Types.elm  View.elm
frontend/src/Http/: Extra.elm
frontend/src/MyBulma/: Form.elm
frontend/src/NewTodo/: State.elm  Types.elm  View.elm
frontend/src/Styles/: BulmaModifiers.elm  Style.elm
frontend/src/Todos/: State.elm  Types.elm  View.elm
frontend/src/Util/: Events.elm  String.elm  Time.elm
src/: App.hs  Lib.hs  Models.hs
src/Apis/: TodoApi.hs
src/Config/: Config.hs
src/DataStore/: Internal.hs
src/Handlers/: TodoHandler.hs
