name:                todo-app-servant-elm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/reouno/todo-app-servant-elm#readme
license:             BSD3
license-file:        LICENSE
author:              Leo Uno
maintainer:          leouno12@gmail.com
copyright:           Copyright (c) 2017 Leo Uno
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Apis.TodoApi
                     , App
                     , Config.Config
                     , DataStore.Internal
                     , Handlers.TodoHandler
                     , Models
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , blaze-html
                     , containers
                     , elm-export
                     , elm-export-persistent
                     , filepath
                     , http-api-data
                     , http-media
                     , monad-logger
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , servant
                     , servant-elm
                     , servant-server
                     , shelly
                     , string-conversions
                     , stm
                     , text
                     , time
                     , unliftio-core
                     , wai
                     , warp
  default-language:    Haskell2010

executable todo-app-servant-elm-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , todo-app-servant-elm
                     , warp
  default-language:    Haskell2010

test-suite todo-app-servant-elm-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , todo-app-servant-elm
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/reouno/todo-app-servant-elm
